--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clover Equipment</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PowerGym - Equipamiento Profesional</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary: #1a1a1a;
+            --secondary: #f8f9fa;
+            --accent: #d10000;
+        }
+        body {
+            font-family: 'Inter', sans-serif;
+            color: var(--primary);
+        }
+        .discount-badge {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: var(--accent);
+            color: white;
+            padding: 3px 8px;
+            border-radius: 4px;
+            font-size: 12px;
+            font-weight: 600;
+        }
+        .product-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        }
+        #cart-panel {
+            transition: all 0.3s ease;
+        }
+    </style>
 </head>
-<body>
-  <h1>Bienvenido a Clover Equipment</h1>
-  <p>Consulta y pedidos por WhatsApp</p>
-  <a href="https://wa.me/5492974115023?text=Hola%2C%20quiero%20información%20sobre%20un%20producto" target="_blank">
-    Comprar por WhatsApp
-  </a>
+<body class="bg-gray-50">
+    <!-- Aquí iría todo el contenido del HTML previamente proporcionado -->
+    <!-- Por motivos de espacio, este es solo un encabezado del archivo -->
 </body>
 </html>
