--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PowerGym - Equipamiento Profesional</title>
+    <title>Clover Equipment </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -84,8 +84,8 @@
                 <!-- Product 1 -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md transition duration-300 relative">
                     <div class="relative">
-                        <img src="https://placehold.co/600x400?text=Olympic+Barbell" alt="Professional Olympic barbell with chrome finish and knurled grip for weightlifting" class="w-full h-48 object-cover" />
-                        <span class="discount-badge">-15% con código</span>
+                        <img src="Banco Estandar.png" alt="Banco estandar con medidas IPF" class="w-full h-48 object-cover" />
+                    
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">Barra Olímpica Elite</h3>
