--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-8">
-                <div class="text-2xl font-bold text-gray-800">POWER<span class="text-red-600">GYM</span></div>
+                <div class="text-2xl font-bold text-gray-800">CLOVER<span class="text-red-600">EQUIPMENT</span></div>
                 <nav class="hidden md:flex space-x-6">
                     <a href="#" class="text-gray-800 hover:text-red-600 font-medium">Productos</a>
                     <a href="#" class="text-gray-800 hover:text-red-600 font-medium">Equipamiento</a>
@@ -66,7 +66,7 @@
     <section class="bg-gray-900 text-white">
         <div class="container mx-auto px-4 py-20 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-10 md:mb-0">
-                <h1 class="text-4xl md:text-5xl font-bold mb-6">EQUIPAMIENTO PROFESIONAL <span class="text-red-500">PARA GIMNASIOS</span></h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">EQUIPAMIENTO PROFESIONAL <span class="text-red-500">PARA TU GIMNASIO</span></h1>
                 <p class="text-lg text-gray-300 mb-8">Fabricado con los más altos estándares de calidad para entrenamiento de alto rendimiento.</p>
                 <a href="#products" class="bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-md font-medium transition duration-300 inline-block">Ver Productos</a>
             </div>
@@ -88,11 +88,11 @@
                     
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Barra Olímpica Elite</h3>
-                        <p class="text-gray-600 mb-4">Barra de 20kg con marcado central para levantamientos de potencia.</p>
+                        <h3 class="text-xl font-semibold mb-2">Banco estandar IPF</h3>
+                        <p class="text-gray-600 mb-4">Banco con medidas segun reglamento IPF</p>
                         <div class="flex items-center mb-4">
-                            <span class="text-2xl font-bold">$299.00</span>
-                            <span class="text-sm text-gray-500 line-through ml-2">$349.00</span>
+                            <span class="text-2xl font-bold">$207000</span>
+                            <span class="text-sm text-gray-500 line-through ml-2">$250000</span>
                         </div>
                         <div class="mb-4">
                             <label for="discount-code-1" class="block text-sm font-medium text-gray-700 mb-1">Código de descuento</label>
@@ -223,9 +223,9 @@
     <script>
         // Product discounts data
         const discountCodes = {
-            'POWER15': { productIds: ['product-1'], discount: 0.15 },
-            'GYM10': { productIds: ['product-2'], discount: 0.1 }, 
-            'PRO20': { productIds: ['product-3'], discount: 0.2 }
+            'KIWI': { productIds: ['product-1'], discount: 0.05 },
+            'HADABLANCA': { productIds: ['product-2'], discount: 0.05 }, 
+            'KIWI2': { productIds: ['product-3'], discount: 0.2 }
         };
 
         // Cart functionality
