--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
                             </div>
                             <p id="discount-message-1" class="text-xs mt-1 text-green-600 hidden">Descuento aplicado!</p>
                         </div>
-                        <button onclick="addToCart('product-1', 'Barra Olímpica Elite', 299, 'https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/13cdeb80-d059-4b56-9c31-d415a65626f5.png')" class="w-full bg-gray-900 hover:bg-gray-800 text-white py-2 rounded-md transition duration-300">Agregar al carrito</button>
+                        <button onclick="addToCart('product-1', 'Banco estandar IPF', 207000, 'https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/13cdeb80-d059-4b56-9c31-d415a65626f5.png')" class="w-full bg-gray-900 hover:bg-gray-800 text-white py-2 rounded-md transition duration-300">Agregar al carrito</button>
                     </div>
                 </div>
 
                 <!-- Product 2 -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md transition duration-300 relative">
                     <div class="relative">
-                        <img src="https://placehold.co/600x400?text=Bumper+Plates" alt="Set of professional bumper plates in different colors and weights for crossfit training" class="w-full h-48 object-cover" />
-                        <span class="discount-badge">-10% con código</span>
+                        <img src="Portadisocos v1.png" alt="Set of professional bumper plates in different colors and weights for crossfit training" class="w-full h-48 object-cover" />
+                       
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Discos de Caucho</h3>
-                        <p class="text-gray-600 mb-4">Set de 4 discos (10kg, 15kg, 20kg, 25kg) color premium.</p>
+                        <h3 class="text-xl font-semibold mb-2">Portadiscos V.1</h3>
+                        <p class="text-gray-600 mb-4">Portadiscos para capacidad de 15 discos (11 principales y 4 adicionales)</p>
                         <div class="flex items-center mb-4">
-                            <span class="text-2xl font-bold">$599.00</span>
-                            <span class="text-sm text-gray-500 line-through ml-2">$659.00</span>
+                            <span class="text-2xl font-bold">$200000</span>
+                            <span class="text-sm text-gray-500 line-through ml-2">$250000</span>
                         </div>
                         <div class="mb-4">
                             <label for="discount-code-2" class="block text-sm font-medium text-gray-700 mb-1">Código de descuento</label>
@@ -127,7 +127,7 @@
                             </div>
                             <p id="discount-message-2" class="text-xs mt-1 text-green-600 hidden">Descuento aplicado!</p>
                         </div>
-                        <button onclick="addToCart('product-2', 'Discos de Caucho', 599, 'https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/a6694b5e-36bf-4326-8839-0498b3f7f2b8.png')" class="w-full bg-gray-900 hover:bg-gray-800 text-white py-2 rounded-md transition duration-300">Agregar al carrito</button>
+                        <button onclick="addToCart('product-2', 'Discos de Caucho', 200000, 'https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/a6694b5e-36bf-4326-8839-0498b3f7f2b8.png')" class="w-full bg-gray-900 hover:bg-gray-800 text-white py-2 rounded-md transition duration-300">Agregar al carrito</button>
                     </div>
                 </div>
 
