--- a/index.html
+++ b/index.html
@@ -197,12 +197,12 @@
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="text-xl font-bold mb-4">POWER<span class="text-red-600">GYM</span></h3>
+                    <h3 class="text-xl font-bold mb-4">CLOVER<span class="text-red-600">EQUIPMENT</span></h3>
                     <p class="text-gray-400">Equipamiento profesional para gimnasios y atletas de alto rendimiento.</p>
                 </div>
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Contacto</h4>
-                    <p class="text-gray-400 mb-2">info@powergym.com</p>
+                    <p class="text-gray-400 mb-2">cloverpowerlifting@gmail.com</p>
                     <p class="text-gray-400">+1 234 567 890</p>
                 </div>
                 <div>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-500 text-sm">
-                <p>© 2023 PowerGym. Todos los derechos reservados.</p>
+                <p>© 2025 Clover Equipment.</p>
             </div>
         </div>
     </footer>
