--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="#products" class="bg-red-600 hover:bg-red-700 text-white px-6 py-3 rounded-md font-medium transition duration-300 inline-block">Ver Productos</a>
             </div>
             <div class="md:w-1/2 flex justify-center">
-                <img src="https://placehold.co/600x400?text=Hero+Gym+Equipment" alt="Modern gym equipment setup with weight plates, barbells and racks in a professional training facility" class="rounded-lg shadow-xl" />
+                <img src="LOGO CLOVER.PNG" alt="Modern gym equipment setup with weight plates, barbells and racks in a professional training facility" class="rounded-lg shadow-xl" />
             </div>
         </div>
     </section>
