--- a/index.html
+++ b/index.html
@@ -134,15 +134,16 @@
                 <!-- Product 3 -->
                 <div class="product-card bg-white rounded-lg overflow-hidden shadow-md transition duration-300 relative">
                     <div class="relative">
-                        <img src="https://placehold.co/600x400?text=Squat+Rack" alt="Commercial grade squat rack with safety bars and pull-up station for home gym" class="w-full h-48 object-cover" />
-                        <span class="discount-badge">-20% con código</span>
+                        <img src="COMBO.png" alt="Commercial grade squat rack with safety bars and pull-up station for home gym" class="w-full h-48 object-cover" />
+              
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Rack de Sentadillas Pro</h3>
-                        <p class="text-gray-600 mb-4">Estructura robusta para levantamientos pesados con barras de seguridad.</p>
+                        <h3 class="text-xl font-semibold mb-2">Combo Rack Clover</h3>
+                        <p class="text-gray-600 mb-4">Combo rack segun medidas IPF apto para competencias</p>
+                        <a href="combo-rack.html" class="text-red-600 underline">Ver más</a>
                         <div class="flex items-center mb-4">
-                            <span class="text-2xl font-bold">$1,199.00</span>
-                            <span class="text-sm text-gray-500 line-through ml-2">$1,499.00</span>
+                            <span class="text-2xl font-bold">$2250000</span>
+                            <span class="text-sm text-gray-500 line-through ml-2">$2500000</span>
                         </div>
                         <div class="mb-4">
                             <label for="discount-code-3" class="block text-sm font-medium text-gray-700 mb-1">Código de descuento</label>
