combo-rack.html

--- a/combo-rack.html
+++ b/combo-rack.html
@@ -18,9 +18,9 @@
         <p class="mb-4">Este combo incluye rack de sentadillas, barra olímpica, y 100 kg en discos bumper. Ideal para entrenamientos completos en casa o en box de CrossFit. Estructura profesional, diseño robusto y materiales de alta calidad.</p>
 
         <div class="mb-6">
-            <p class="text-2xl font-bold text-green-700">$950.000</p>
+            <p class="text-2xl font-bold text-green-700">$2200000</p>
             <p class="text-sm text-gray-500 line-through mb-2">$1.055.000</p>
-            <span class="discount-badge">10% OFF con código: COMBOKIWI</span>
+            <span class="discount-badge">PRODUCTO FABRICADO A PEDIDO</span>
         </div>
 
         <div class="mb-6">
