--- a/combo-rack.html
+++ b/combo-rack.html
@@ -26,7 +26,7 @@
         <div class="mb-6">
             <label for="discount-code" class="block text-sm font-medium text-gray-700 mb-1">Código de descuento</label>
             <div class="flex">
-                <input type="text" id="discount-code" class="flex-1 border border-gray-300 rounded-l-md px-3 py-2 text-sm" placeholder="Ej: COMBOKIWI">
+                <input type="text" id="discount-code" class="flex-1 border border-gray-300 rounded-l-md px-3 py-2 text-sm" placeholder="Ej: POWER10">
                 <button onclick="applyDiscount()" class="bg-gray-200 hover:bg-gray-300 px-3 py-2 rounded-r-md text-sm font-medium">Aplicar</button>
             </div>
             <p id="discount-message" class="text-xs mt-1 text-green-600 hidden">Descuento aplicado!</p>
